--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-smart-table/2.1.8/smart-table.min.js"></script>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
 
-<script src="client.js"></script>
+<script src="/client.js"></script>
+
 <style>
     .st-sort-ascent:before{
         content: '\25B2';
