--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-smart-table/2.1.8/smart-table.min.js"></script>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+<head>
+    <title>CudaNews: Security News</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-smart-table/2.1.8/smart-table.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
 
-<script src="/client.js"></script>
+    <script src="/client.js"></script>
 
-<style>
-    .st-sort-ascent:before{
-        content: '\25B2';
-    }
+    <style>
+        .st-sort-ascent:before{
+            content: '\25B2';
+        }
 
-    .st-sort-descent:before{
-        content: '\25BC';
-    }
-    body {
-        font-family: open-sans;
-        font-size: 14px;
-    }
-</style>
+        .st-sort-descent:before{
+            content: '\25BC';
+        }
+        body {
+            font-family: open-sans;
+            font-size: 14px;
+        }
+    </style>
+</head>
 
 <body ng-app="CudaNewsApp" ng-controller="CudaNewsController">
 	<div class="container">
 		<h1>CudaNews: Security News</h1>
-		<div ng-include="'../header-ads.html'"></div>
 		<div ng-show="loading"><h3>Loading...</h3></div>
 		<table st-table="display_records"  st-safe-src="news" class="table table-striped">
 			<thead>
@@ -63,6 +65,7 @@
 				</tr>
 			</tfoot>
 		</table>
+    </div>
 </body>
 
 </html>
