--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 
 <head>
     <title>CudaNews: Security News</title>
+
+    <link rel="icon" href="https://www.barracuda.com/assets/img/layout/logo/favicon_barracuda.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="https://www.barracuda.com/assets/img/layout/logo/favicon_barracuda.ico" />
+	<link rel="apple-touch-icon" href="https://www.barracuda.com/assets/img/layout/logo/ios_icon.png" />
+	<link rel="apple-touch-icon" sizes="72x72" href="https://www.barracuda.com/assets/img/layout/logo/ios_icon72x72.png" />
+	<link rel="apple-touch-icon" sizes="114x114" href="https://www.barracuda.com/assets/img/layout/logo/ios_icon114x114.png" />
+
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-smart-table/2.1.8/smart-table.min.js"></script>
@@ -21,7 +28,7 @@
 
         body {
             font-family: open-sans;
-            font-size: 14px;
+            font-size: 12px;
         }
     </style>
 </head>
@@ -36,7 +43,7 @@
             <thead>
                 <tr>
                     <th></th>
-                    <th width="100px">News Title</th>
+                    <th width="50%">News Title</th>
                     <th>Date</th>
                     <th>Source</th>
                     <th>Action</th>
