Fixed action buttons

--- a/index.html
+++ b/index.html
@@ -70,29 +70,29 @@
                     <td>{{row.source.name}}</td>
                     <td>
                         <a ng-href="{{ row.url }}" target="_blank" type="button" class="btn btn-sm btn-info">
-							              <i class="glyphicon glyphicon-eye-open"></i>
-						            </a>
-                        <button class="btn btn-medium"
-                                socialshare
-                                socialshare-provider="reddit"
-                                socialshare-text="{{row.source.name}}"
-                                socialshare-url="{{row.url}}"
-                                socialshare-popup-height="300"
-                                socialshare-popup-width="400"
-                                socialshare-trigger="click" >
-                                <i class="fa fa-reddit"></i>
+                            <i class="fa fa-eye fa-lg"></i>
+						</a>
+                        <button class="btn btn-sm btn-info"
+                            socialshare
+                            socialshare-provider="reddit"
+                            socialshare-text="{{row.source.name}}"
+                            socialshare-url="{{row.url}}"
+                            socialshare-popup-height="300"
+                            socialshare-popup-width="400"
+                            socialshare-trigger="click" >
+                            <i class="fa fa-reddit fa-lg"></i>
                         </button>
-                        <button class="btn btn-medium font-bold"
-                                socialshare
-                                socialshare-provider="twitter"
-                                socialshare-hashtags="security, hacked, exploits, malware, spam"
-                                socialshare-via="cudanews"
-                                socialshare-text="{{row.title}}"
-                                socialshare-url="{{row.url}}"
-                                socialshare-popup-height="300"
-                                socialshare-popup-width="400"
-                                socialshare-trigger="click" >
-                                <i class="fa fa-twitter"></i>
+                        <button class="btn btn-sm btn-info"
+                            socialshare
+                            socialshare-provider="twitter"
+                            socialshare-hashtags="security, hacked, exploits, malware, spam"
+                            socialshare-via="cudanews"
+                            socialshare-text="{{row.title}}"
+                            socialshare-url="{{row.url}}"
+                            socialshare-popup-height="300"
+                            socialshare-popup-width="400"
+                            socialshare-trigger="click" >
+                            <i class="fa fa-twitter fa-lg"></i>
                         </button>
                     </td>
                 </tr>
