--- a/index.html
+++ b/index.html
@@ -4,19 +4,17 @@
 <head>
     <title>CudaNews: Security News</title>
 
-    <link rel="icon" href="https://www.barracuda.com/assets/img/layout/logo/favicon_barracuda.ico" type="image/x-icon" />
-	<link rel="shortcut icon" href="https://www.barracuda.com/assets/img/layout/logo/favicon_barracuda.ico" />
-	<link rel="apple-touch-icon" href="https://www.barracuda.com/assets/img/layout/logo/ios_icon.png" />
-	<link rel="apple-touch-icon" sizes="72x72" href="https://www.barracuda.com/assets/img/layout/logo/ios_icon72x72.png" />
-	<link rel="apple-touch-icon" sizes="114x114" href="https://www.barracuda.com/assets/img/layout/logo/ios_icon114x114.png" />
+    <link rel="icon" href="https://www.barracuda.com/assets/img/layout/logo/favicon_barracuda.ico"
+        type="image/x-icon">
+    <link rel="shortcut icon" href="https://www.barracuda.com/assets/img/layout/logo/favicon_barracuda.ico">
+    <link rel="apple-touch-icon" href="https://www.barracuda.com/assets/img/layout/logo/ios_icon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="https://www.barracuda.com/assets/img/layout/logo/ios_icon72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="https://www.barracuda.com/assets/img/layout/logo/ios_icon114x114.png">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    <!-- CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-smart-table/2.1.8/smart-table.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-    <script src="/client.js"></script>
 
     <style>
         .st-sort-ascent:before {
@@ -35,8 +33,6 @@
 </head>
 
 <body ng-app="CudaNewsApp" ng-controller="CudaNewsController">
-    <script src="angular-socialshare.js"></script>
-
     <div class="container">
         <a href="http://barracuda.com">
         <img src="https://www.barracuda.com/assets/img/layout/logo/logo_color.svg" alt="Barracuda logo" id="logo-color" width="100">
@@ -62,38 +58,16 @@
                 </tr>
             </thead>
             <tbody>
-                <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in display_records">
-                    <td><img class="img-thumbnail img-responsive" alt="image" ng-src="{{ row.urlToImage }}"
+                <tr st-select-row="row" st-select-mode="multiple" ng-repeat="article in articles">
+                    <td><img class="img-thumbnail img-responsive" alt="image" ng-src="{{ article.img}}"
                             style="width: 50px; height: 50px;" /></td>
-                    <td>{{row.title}}</td>
-                    <td>{{row.publishedAt | date}}</td>
-                    <td>{{row.source.name}}</td>
+                    <td>{{article.title}}</td>
+                    <td>{{article.date | date}}</td>
+                    <td>{{article.source}}</td>
                     <td>
-                        <a ng-href="{{ row.url }}" target="_blank" type="button" class="btn btn-sm btn-info">
+                        <a ng-href="{{ article.url }}" target="_blank" type="button" class="btn btn-sm btn-info">
                             <i class="fa fa-eye fa-lg"></i>
 						</a>
-                        <button class="btn btn-sm btn-info"
-                            socialshare
-                            socialshare-provider="reddit"
-                            socialshare-text="{{row.source.name}}"
-                            socialshare-url="{{row.url}}"
-                            socialshare-popup-height="300"
-                            socialshare-popup-width="400"
-                            socialshare-trigger="click" >
-                            <i class="fa fa-reddit fa-lg"></i>
-                        </button>
-                        <button class="btn btn-sm btn-info"
-                            socialshare
-                            socialshare-provider="twitter"
-                            socialshare-hashtags="security, hacked, exploits, malware, spam"
-                            socialshare-via="cudanews"
-                            socialshare-text="{{row.title}}"
-                            socialshare-url="{{row.url}}"
-                            socialshare-popup-height="300"
-                            socialshare-popup-width="400"
-                            socialshare-trigger="click" >
-                            <i class="fa fa-twitter fa-lg"></i>
-                        </button>
                     </td>
                 </tr>
             </tbody>
@@ -107,8 +81,31 @@
         </table>
     </div>
 
-    <div class="copyright"><div class="container"><small><a href="https://www.barracuda.com/company/contact">Contact Us</a>|</span><a href="https://www.barracuda.com/legal/terms">Website Terms &amp; Conditions</a>|<a href="https://www.barracuda.com/company/careers">Careers</a><span class="hidden-sm-down">|</span><em>© 2003 - 2018 Barracuda Networks, Inc. All rights reserved.</em></small></div></div>
+    <div class="copyright">
+        <div class="container"><small><a href="https://www.barracuda.com/company/contact">Contact Us</a>|</span><a href="https://www.barracuda.com/legal/terms">Website Terms &amp; Conditions</a>|<a href="https://www.barracuda.com/company/careers">Careers</a><span class="hidden-sm-down">|</span><em>© 2003 - 2018 Barracuda Networks, Inc. All rights reserved.</em></small></div>
+    </div>
 
+    <!-- JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.6.6/firebase.js"></script>
+    <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-smart-table/2.1.8/smart-table.min.js"></script>
+
+    <!-- Initialize firebase -->
+    <script>
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyDoFzRaoxfmP6xp2ReODipkBdEbmcsLQuc",
+            authDomain: "cudannews.firebaseapp.com",
+            databaseURL: "https://cudannews.firebaseio.com",
+            projectId: "cudannews",
+            storageBucket: "cudannews.appspot.com",
+            messagingSenderId: "475653215298"
+        };
+        firebase.initializeApp(config);
+    </script>
+
+    <script src="/client.js"></script>
 </body>
 
 </html>
