--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </thead>
             <tbody>
                 <tr st-select-row="row" st-select-mode="multiple" ng-repeat="article in articles">
-                    <td><img class="img-thumbnail img-responsive" alt="image" ng-src="{{ article.img}}"
+                    <td><img class="img-thumbnail img-responsive" alt="image" ng-src="{{ article.img || 'news.png' }}"
                             style="width: 50px; height: 50px;" /></td>
                     <td>{{article.title}}</td>
                     <td>{{article.date | date}}</td>
