--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
         <div ng-show="loading">
             <h3>Loading...</h3>
         </div>
-        <table st-table="display_records" st-safe-src="news" class="table table-striped">
+        <table st-table="news_articles" st-safe-src="articles" class="table table-striped">
             <thead>
                 <tr>
                     <th></th>
                     <th st-sort="title" width="50%">News Title</th>
-                    <th st-sort="publishedAt">Date</th>
-                    <th st-sort="source.name">Source</th>
+                    <th st-sort="date">Date</th>
+                    <th st-sort="source">Source</th>
                     <th>Action</th>
                 </tr>
                 <tr>
@@ -89,7 +89,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr st-select-row="row" st-select-mode="multiple" ng-repeat="article in articles">
+                <tr st-select-row="row" st-select-mode="multiple" ng-repeat="article in news_articles">
                     <td><img class="img-thumbnail img-responsive" alt="image" ng-src="{{ article.img || 'news.png' }}"
                             style="width: 50px; height: 50px;" /></td>
                     <td>{{article.title}}</td>
