Sort by Date by default

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <tr>
                     <th></th>
                     <th st-sort="title" width="50%">News Title</th>
-                    <th st-sort="date">Date</th>
+                    <th st-sort="date" st-sort-default="reverse">Date</th>
                     <th st-sort="source">Source</th>
                     <th>Action</th>
                 </tr>
